--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6 circ slide-l">
-                    <img src="https://pngimg.com/uploads/engine/engine_PNG63.png" alt="machine" class="img-fluid slid-r">
+                    <img src="./public/engine_PNG63.png" alt="machine" class="img-fluid slid-r">
                 </div>
                 <div class="col-md-6 slide-r" id="home1" >
                     <h1>AMD</h1>
